--- a/HTML_Pages/cardPage.css
+++ b/HTML_Pages/cardPage.css
@@ -103,3 +103,21 @@ button:hover {
 .feedback p {
     font-size: 50px;
 }
+
+.selector {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-size: 15px;
+    background-color: white;
+    border: 1px solid grey;
+    padding: 5px 5px;
+    border-radius: 5px;
+}
+
+input[type="submit"] {
+    display: block;
+    margin: 0 auto;
+    padding: 15px 10px;
+    font-size: 20px;
+    text-align: center;
+}
