--- a/HTML_Pages/admin.css
+++ b/HTML_Pages/admin.css
@@ -18,6 +18,9 @@
 }
 
 .selectButton {
+    background-color: #f55e61;
+    color: white;
+    text-align: center;
     font-size: 16px;
     margin-left: 20px;
     margin-bottom: 10px;
@@ -65,6 +68,6 @@ button:hover {
 }
 
 .box p {
-    font-size: 25px;
+    font-size: 20px;
     margin-left: 20px;
 }
